fix spacing header error on tablet

--- a/grunt/cssSource/_tabletStyles.scss
+++ b/grunt/cssSource/_tabletStyles.scss
@@ -45,6 +45,8 @@
 
   // <header> tag
   .site-header {
+    max-width: 450px;
+    float: left;
     margin-bottom: 37px;
   }
   
